--- a/public/t1a10-loops-Aden.html
+++ b/public/t1a10-loops-Aden.html
@@ -1,8 +1,5 @@
-<h2 align=center>t1a010-loops-by-Aden.html</h2>
+<h2 align=center>t1a010-loops-by-Aden.html</h2> 
 
-
-
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -58,13 +55,14 @@
 <p>Weird Number: <input id="myWeird" type="number" value="2" min="0" aria-label="Weird number" /></p>
 <input type="button" value="Run For and While Loops" onclick="runLoops()">
 <input type="button" value="Run Do-While Loop" onclick="runDoWhileLoop()">
+<input type="button" value="Show Primes" onclick="showPrimes()">
+<input type="button" value="Show Evens" onclick="showEvens()">
 
 <h4>Output</h4>
 <div id="output" aria-live="polite">Output will appear here...</div>
 
 <script>
     function runLoops() {
-        // Get values from input fields
         const maxLoops = parseInt(document.getElementById('myNum01').value);
         const weirdNumber = parseInt(document.getElementById('myWeird').value);
         let output = '';
@@ -85,7 +83,7 @@
             if (j % 2 === 0) {
                 output += 'Even iteration: ' + j + '<br>'; // Display if the iteration index is even
             }
-            j += 2; // Increment by 2
+            j += 1; // Increment by 1 for each iteration
         }
 
         // Output results to the designated section
@@ -93,7 +91,6 @@
     }
 
     function runDoWhileLoop() {
-        // Get max loop count from input fields
         const maxLoops = parseInt(document.getElementById('myNum01').value);
         let output = '';
 
@@ -107,6 +104,40 @@
         } while (k < maxLoops); // Loop until k reaches the max number of loops
 
         // Output results to the designated section
+        document.getElementById('output').innerHTML += output; // Append to existing output
+    }
+
+    function isPrime(num) {
+        if (num <= 1) return false;
+        for (let i = 2; i <= Math.sqrt(num); i++) {
+            if (num % i === 0) return false;
+        }
+        return true;
+    }
+
+    function showPrimes() {
+        const maxLoops = parseInt(document.getElementById('myNum01').value);
+        let output = '<br><strong>Prime Numbers:</strong><br>';
+
+        for (let i = 0; i <= maxLoops; i++) {
+            if (isPrime(i)) {
+                output += i + ' ';
+            }
+        }
+
+        document.getElementById('output').innerHTML += output; // Append to existing output
+    }
+
+    function showEvens() {
+        const maxLoops = parseInt(document.getElementById('myNum01').value);
+        let output = '<br><strong>Even Numbers:</strong><br>';
+
+        for (let i = 0; i <= maxLoops; i++) {
+            if (i % 2 === 0) {
+                output += i + ' ';
+            }
+        }
+
         document.getElementById('output').innerHTML += output; // Append to existing output
     }
 </script>
