--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,8 @@ Aden
         <li><a href="t1a07-functions-Aden.html">t1a07-functions-Aden.html</a></li>
         <li><a href="t1a08-variables-Aden.html">t1a08-variables-Aden.html</a></li>
         <li><a href="t1a09-decision-if-Aden.html">t1a09-decision-if-Aden.html</a></li>
-         <li><a href="t1a010-loops-Aden.html">t1a010-loops-Aden.html</a></li>
+         <li><a href="t1a10-loops-Aden.html">t1a10-loops-Aden.html</a></li>
+        <li><a href="t1a11-arrays.html">t1a11-arrays.html</a></li>
     </ul>
 
     <h2>X Assignments</h2>
