--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,146 +1,22 @@
-<h2 align=center>t1a010-loops-by-Aden.html</h2> 
-
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loops Example</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f0f0f0;
-        }
-        h2, h4 {
-            color: #333;
-        }
-        h4 {
-            margin-top: 20px;
-        }
-        #output {
-            margin-top: 10px;
-            border: 1px solid #ccc;
-            padding: 10px;
-            background-color: #ffffff;
-            min-height: 50px;
-            border-radius: 5px;
-        }
-        input[type="number"], input[type="button"] {
-            margin-top: 10px;
-            padding: 8px;
-            font-size: 16px;
-        }
-        input[type="button"] {
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        input[type="button"]:hover {
-            background-color: #0056b3;
-        }
-    </style>
-</head>
-<body>
-
-<h2>JavaScript Loops Example</h2>
-<p>
-    <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Control_flow_and_error_handling#for_statement" target="_blank">Good Reference to JavaScript Loops</a>
-</p>
-
-<h4>Input Values</h4>
-<p>Set the maximum number of loops and a reference number:</p>
-<p>Max Loop Count: <input id="myNum01" type="number" value="4" min="1" aria-label="Maximum number of loops" /></p>
-<p>Weird Number: <input id="myWeird" type="number" value="2" min="0" aria-label="Weird number" /></p>
-<input type="button" value="Run For and While Loops" onclick="runLoops()">
-<input type="button" value="Run Do-While Loop" onclick="runDoWhileLoop()">
-<input type="button" value="Show Primes" onclick="showPrimes()">
-<input type="button" value="Show Evens" onclick="showEvens()">
-
-<h4>Output</h4>
-<div id="output" aria-live="polite">Output will appear here...</div>
-
 <script>
-    function runLoops() {
-        const maxLoops = parseInt(document.getElementById('myNum01').value);
-        const weirdNumber = parseInt(document.getElementById('myWeird').value);
-        let output = '';
-
-        // For Loop
-        output += '<strong>For Loop Output:</strong><br>';
-        for (let i = 0; i < maxLoops; i++) {
-            if (i * 2 > weirdNumber) {
-                output += 'Cool! '; // Decision-based message
-            }
-            output += 'For Loop number: ' + i + '<br>'; // Display loop number
-        }
-
-        // While Loop
-        output += '<br><strong>While Loop Output:</strong><br>';
-        let j = 0;
-        while (j < maxLoops) {
-            if (j % 2 === 0) {
-                output += 'Even iteration: ' + j + '<br>'; // Display if the iteration index is even
-            }
-            j += 1; // Increment by 1 for each iteration
-        }
-
-        // Output results to the designated section
-        document.getElementById('output').innerHTML = output;
-    }
-
-    function runDoWhileLoop() {
-        const maxLoops = parseInt(document.getElementById('myNum01').value);
-        let output = '';
-
-        // Do-While Loop
-        output += '<br><strong>Do-While Loop Output:</strong><br>';
-        let k = 0;
-
-        do {
-            output += 'Do-While iteration: ' + k + '<br>'; // Display current iteration
-            k++;
-        } while (k < maxLoops); // Loop until k reaches the max number of loops
-
-        // Output results to the designated section
-        document.getElementById('output').innerHTML += output; // Append to existing output
-    }
-
-    function isPrime(num) {
-        if (num <= 1) return false;
-        for (let i = 2; i <= Math.sqrt(num); i++) {
-            if (num % i === 0) return false;
-        }
-        return true;
-    }
-
-    function showPrimes() {
-        const maxLoops = parseInt(document.getElementById('myNum01').value);
-        let output = '<br><strong>Prime Numbers:</strong><br>';
-
-        for (let i = 0; i <= maxLoops; i++) {
-            if (isPrime(i)) {
-                output += i + ' ';
-            }
-        }
-
-        document.getElementById('output').innerHTML += output; // Append to existing output
-    }
-
-    function showEvens() {
-        const maxLoops = parseInt(document.getElementById('myNum01').value);
-        let output = '<br><strong>Even Numbers:</strong><br>';
-
-        for (let i = 0; i <= maxLoops; i++) {
-            if (i % 2 === 0) {
-                output += i + ' ';
-            }
-        }
-
-        document.getElementById('output').innerHTML += output; // Append to existing output
-    }
+// set a few Global Variables
+    let myMax = 6
+    let myArray = new Array(myMax)
 </script>
 
-</body>
-</html>
+Input:<input type=text id="myFirstName" value="Aden>
+
+<input type=button value="Set Array" onClick="{ 
+   myArray[0] = 'Aden'
+   myArray[1] = 'Mary'
+   myArray[2] = 'John'
+   document.getElementById('myDiv01').innerHTML = 'You set the array'
+}">
+<input type=button value="Show Array" onClick="{ 
+   document.getElementById('myDiv01').innerHTML = ''
+    for (myLoop=0;   myLoop < 3;   myLoop++){
+      document.getElementById('myDiv01').innerHTML +=  'myArray[' + myLoop + '] = ' +
+        myArray[myLoop] + '<br>'
+       }
+    }"><br> 
+     <div id="myDiv01">...</div>
