--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -4,7 +4,7 @@
     let myArray = new Array(myMax)
 </script>
 
-Input:<input type=text id="myFirstName" value="Aden>
+Input:<input type=text id="myFirstName" value="Aden"><br>
 
 <input type=button value="Set Array" onClick="{ 
    myArray[0] = 'Aden'
