--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@ Aden
         <li><a href="t1a08-variables-Aden.html">t1a08-variables-Aden.html</a></li>
         <li><a href="t1a09-decision-if-Aden.html">t1a09-decision-if-Aden.html</a></li>
          <li><a href="t1a10-loops-Aden.html">t1a10-loops-Aden.html</a></li>
-        <li><a href="t1a11-arrays.html">t1a11-arrays.html</a></li>
+        <li><a href="t1a11-arrays-Aden.html">t1a11-arrays-Aden.html</a></li>
     </ul>
 
     <h2>X Assignments</h2>
