--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,5 +1,5 @@
  <h1 align="center">t1a11-arrays-Aden.html</h1>
-<script>
+<h1 align="center"><script>
 // set a few Global Variables
     let myMax = 6
     let myArray = new Array(myMax)
@@ -20,4 +20,4 @@ Input:<input type=text id="myFirstName" value="Aden"><br>
         myArray[myLoop] + '<br>'
        }
     }"><br> 
-     <div id="myDiv01">...</div>
+     <div id="myDiv01">...</div></h1>
