--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -20,7 +20,7 @@ Input:<input type=text id="myFirstName" value="Aden"><br>
         myArray[myLoop] + '<br>'
        }
     }"><br> 
-     <div id="myDiv01">...</div></h1>
+     <div id="myDiv01">...</div>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -59,4 +59,4 @@ Input:<input type=text id="myFirstName" value="Aden"><br>
     </script>
     
 </body>
-</html>
+</html></h1>
