--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -25,21 +25,65 @@
         }
     </style>
     <script>
-        // Global Variables for Array
+        // Global Variables for Arrays
         let myMax = 6;
-        let myArray = new Array(myMax);
+        let myArray1 = new Array(myMax);
+        let myArray2 = new Array(myMax);
+        let myArray3 = new Array(myMax);
+        let myArray4 = new Array(myMax);
+        let myArray5 = new Array(myMax);
+        let myArray6 = new Array(myMax);
+        let myArray7 = new Array(myMax);
+        let myArray8 = new Array(myMax); // Total of 8 arrays now
 
         function setArray() {
-            myArray[0] = 'Aden';
-            myArray[1] = 'Mary';
-            myArray[2] = 'John';
-            document.getElementById('myDiv01').innerHTML = 'You set the array';
+            myArray1[0] = 'Aden';
+            myArray1[1] = 'Mary';
+            myArray1[2] = 'John';
+
+            myArray2[0] = 'Emma';
+            myArray2[1] = 'Liam';
+            myArray2[2] = 'Olivia';
+
+            myArray3[0] = 'James';
+            myArray3[1] = 'Sophia';
+            myArray3[2] = 'Benjamin';
+
+            myArray4[0] = 'Lucas';
+            myArray4[1] = 'Mia';
+            myArray4[2] = 'Noah';
+
+            myArray5[0] = 'Isabella';
+            myArray5[1] = 'Henry';
+            myArray5[2] = 'Amelia';
+
+            myArray6[0] = 'Ethan';
+            myArray6[1] = 'Ava';
+            myArray6[2] = 'Madison';
+
+            myArray7[0] = 'Aiden';
+            myArray7[1] = 'Skylar';
+            myArray7[2] = 'Jackson';
+
+            myArray8[0] = 'Mason';
+            myArray8[1] = 'Chloe';
+            myArray8[2] = 'Ella';
+
+            document.getElementById('myDiv01').innerHTML = 'You set the arrays';
         }
 
-        function showArray() {
+        function showArrays() {
             document.getElementById('myDiv01').innerHTML = '';
-            for (let myLoop = 0; myLoop < 3; myLoop++) {
-                document.getElementById('myDiv01').innerHTML += 'myArray[' + myLoop + '] = ' + myArray[myLoop] + '<br>';
+            for (let i = 0; i < 3; i++) {
+                document.getElementById('myDiv01').innerHTML +=
+                    'myArray1[' + i + '] = ' + myArray1[i] + '<br>' +
+                    'myArray2[' + i + '] = ' + myArray2[i] + '<br>' + 
+                    'myArray3[' + i + '] = ' + myArray3[i] + '<br>' + 
+                    'myArray4[' + i + '] = ' + myArray4[i] + '<br>' + 
+                    'myArray5[' + i + '] = ' + myArray5[i] + '<br>' + 
+                    'myArray6[' + i + '] = ' + myArray6[i] + '<br>' + 
+                    'myArray7[' + i + '] = ' + myArray7[i] + '<br>' + 
+                    'myArray8[' + i + '] = ' + myArray8[i] + '<br><br>';
             }
         }
 
@@ -53,18 +97,16 @@
 
     <h1 align="center">t1a11-arrays-Aden.html</h1>
 
-    <line class="container">
+    <div class="container">
         <label for="myFirstName">Input:</label>
         <input type="text" id="myFirstName" value="Aden"><br>
 
-        <input type="button" value="Set Array" onClick="setArray()">
-        <input type="button" value="Show Array" onClick="showArray()"><br>
-    </line>
-
-    <div id="myDiv01">...</div>
-
-    <label for="colorPicker">Choose Background Color:</label>
-    <input type="color" id="colorPicker" value="#ffffff" oninput="changeBackgroundColor()">
-
+        <input type="button" value="Set Arrays" onClick="setArray()">
+        <input type="button" value="Show Arrays" onClick="showArrays()"><br>
+    </div>
+    
+    <div id="myDiv01"></div>
+    
+    <input type="color" id="colorPicker" onchange="changeBackgroundColor()">
 </body>
 </html>
