--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -21,11 +21,11 @@
 <body>
 
     <h1>Fruit List</h1>
-    <ul id="fruitList"></ul>
+    <ul id="List"></ul>
     
     <input type="text" id="newFruit" placeholder="Add a new fruit">
     <button onclick="addFruit()">Add Fruit</button>
-    <button onclick="removeFruit()">Remove Last Fruit</button>
+    <button onclick="removeFruit()">Remove Last Added</button>
 
     <script>
         // Initial array of fruits
