--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -20,11 +20,11 @@
 </head>
 <body>
 
-    <h1>Fruit List</h1>
+    <h1>List</h1>
     <ul id="List"></ul>
     
-    <input type="text" id="newFruit" placeholder="Add a new fruit">
-    <button onclick="addFruit()">Add Fruit</button>
+    <input type="text" id="newFruit" placeholder="Add">
+    <button onclick="addFruit()">Add To List</button>
     <button onclick="removeFruit()">Remove Last Added</button>
 
     <script>
