--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -24,8 +24,8 @@
     <ul id="List"></ul>
     
     <input type="text" id="newFruit" placeholder="Add">
-    <button onclick="addFruit()">Add To List</button>
-    <button onclick="removeFruit()">Remove Last Added</button>
+    <button onclick="addtolist()">Add To List</button>
+    <button onclick="lemovelastadded()">Remove Last Added</button>
 
     <script>
         // Initial array of fruits
