--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,10 +1,12 @@
-<h1 align=cemter>t1a12-objects-Aden.html</h1>
+<h2 align=cemter>t1a12-objects-Aden.html</h2>
 
 <a href="">Good reference to Javascript Objects</a><br>
+
 Objects are stored named variables
+
 <h4> Example Objects code</h4>
 <pre>
-let myPerson =} {
+let myPerson =  {
     "firstName": "John",
     "lastName": "Doe"'
     "age": 50, 
@@ -13,6 +15,7 @@ let myPerson =} {
     
 </pre>
 
+<h4> Example working Objects code</h4>
 Nothing: <input type=text id="myText01" value="Useless at the moment"><br>
 
 
