--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,37 +1,52 @@
-<h2 align=cemter>t1a12-objects-Aden.html</h2>
 
-<a href="">Good reference to Javascript Objects</a><br>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Objects Example</title>
+</head>
+<body>
 
-Objects are stored named variables
+<h2 align="center">t1a12-objects-Aden.html</h2>
 
-<h4> Example Objects code</h4>
+<a href="#">Good reference to Javascript Objects</a><br>
+
+<p>Objects are stored named variables</p>
+
+<h4>Example Objects Code</h4>
 <pre>
 let myPerson = {
     "firstName": "John",
-    "lastName": "Doe"'
+    "lastName": "Doe",
     "age": 50, 
     "eyeColor": "blue"
-    }
-    
+};
 </pre>
 
-<h4> Example working Objects code</h4>
+<h4>Example Working Objects Code</h4>
 
-Nothing: <input type=text id="myText01" value="Useless at the moment"><br>
+Nothing: <input type="text" id="myText01" value="Useless at the moment"><br>
 
+<input type="button" value="Example Object Set and Show" onClick="showObjectProperties()">
 
-<input type=button value="Example Object Srt and Show" onClick={
-
-    let myPerson = { 
-     'firstName' : 'John',
-     'lastName'  : 'Doe', 
-     'age'       :  50,
-     'eyeColor'  : 'blue'
- }
-
- document.getElementById('myDiv01').innerHTML = '<br>myPerson Object has properties: <br>'
- document.getElementById('myDiv01').innerHTML += 'firstName: ' + myPerson.firstName + '<br>'
- document.getElementById('myDiv01').innerHTML += 'you do the others  <br> '
-
-}">
 <div id="myDiv01">...</div>
+
+<script>
+function showObjectProperties() {
+    let myPerson = { 
+        'firstName': 'John',
+        'lastName': 'Doe', 
+        'age': 50,
+        'eyeColor': 'blue'
+    };
+
+    document.getElementById('myDiv01').innerHTML = '<br>myPerson Object has properties: <br>';
+    document.getElementById('myDiv01').innerHTML += 'firstName: ' + myPerson.firstName + '<br>';
+    document.getElementById('myDiv01').innerHTML += 'lastName: ' + myPerson.lastName + '<br>';
+    document.getElementById('myDiv01').innerHTML += 'age: ' + myPerson.age + '<br>';
+    document.getElementById('myDiv01').innerHTML += 'eyeColor: ' + myPerson.eyeColor + '<br>';
+}
+</script>
+
+</body>
+</html>
