--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Objects Example</title>
+    <title>t1a12-objects-Aden.html</title>
     <style>
         body {
             font-family: Arial, sans-serif;
