--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -69,7 +69,7 @@
 </head>
 <body>
 
-<h2>JavaScript Objects Example</h2>
+<h2>t1a12-objects-Aden.html</h2>
 
 <a href="#">Good reference to JavaScript Objects</a><br>
 
