--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -33,3 +33,8 @@ my_car.drive(50)
 my_car.drive(20)
 my_car.stop()
 my_car.display_info()
+The Red 2020 Toyota Camry is starting.
+The 2020 Toyota Camry is driving for 50 miles.
+The 2020 Toyota Camry is driving for 20 miles.
+The Red 2020 Toyota Camry is stopping.
+Car Info: 2020 Toyota Camry, Color: Red, Mileage: 70 miles
