--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -43,7 +43,7 @@
         
         <!-- Image -->
         <h2>Sample Image</h2>
-        <img src="https://via.placeholder.com/300" alt="Placeholder Image">
+        <img src="https://i.ibb.co/SPZmG9C/image.png" alt="Your Image Description">
         
         <!-- Link -->
         <h2>Visit Example.com</h2>
