--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@ Aden
         <li><a href="snake.html">snake.html</a></li>
      <li><a href="something.html">something.html</a></li> 
         <li><a href="Testing-page.html">Testing-page.html</a></li> 
+        <li><a href="Testing-page-random.html">Testing-page-random.html</a></li>
      </ol>
 </body>
 
