--- a/public/Testing-page-random.html
+++ b/public/Testing-page-random.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>100 CSS Properties Example</title>
+    <title>120 CSS Properties Example</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,6 +11,11 @@
             padding: 0;
             background-color: #f4f4f4;
             color: #333;
+            animation: backgroundAnimation 10s infinite alternate;
+        }
+        @keyframes backgroundAnimation {
+            0% { background-color: #f4f4f4; }
+            100% { background-color: #e0f7fa; }
         }
         h1 {
             font-size: 2.5rem;
@@ -18,6 +23,10 @@
             color: #4CAF50;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
             margin: 20px;
+            transition: transform 0.3s;
+        }
+        h1:hover {
+            transform: scale(1.1);
         }
         p {
             font-size: 1.2rem;
@@ -58,11 +67,22 @@
         .button:hover {
             background-color: #286090;
             transform: scale(1.05);
+            animation: bounce 1s;
+        }
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+            40% { transform: translateY(-10px); }
+            60% { transform: translateY(-5px); }
         }
         img {
             max-width: 100%;
             height: auto;
             border-radius: 10px;
+            animation: fadeIn 2s;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
         ul {
             list-style-type: square;
@@ -78,6 +98,11 @@
             background-color: #4CAF50;
             color: white;
             position: relative;
+            animation: pulse 1.5s infinite;
+        }
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.05); }
         }
         .footer-link {
             color: white;
@@ -87,6 +112,57 @@
         }
         .footer-link:hover {
             opacity: 1;
+            transform: translateY(-2px);
+        }
+        /* Fun CSS Properties */
+        .fun-element {
+            width: 100px;
+            height: 100px;
+            margin: 20px auto;
+            background-color: #FF5722;
+            border-radius: 50%;
+            animation: spin 4s linear infinite;
+            box-shadow: 0 0 15px rgba(255, 87, 34, 0.7);
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+        .floating {
+            display: inline-block;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+        .floating:hover {
+            transform: translateY(-15px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
+        }
+        .hover-burst {
+            display: inline-block;
+            position: relative;
+        }
+        .hover-burst::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 0;
+            height: 0;
+            background: rgba(255, 255, 255, 0.5);
+            border-radius: 50%;
+            transition: all 0.5s ease;
+            z-index: -1;
+            transform: translate(-50%, -50%);
+        }
+        .hover-burst:hover::after {
+            width: 200%;
+            height: 200%;
+        }
+        .scale-up {
+            cursor: pointer;
+            transition: transform 0.3s;
+        }
+        .scale-up:hover {
+            transform: scale(1.1);
         }
     </style>
 </head>
@@ -94,7 +170,7 @@
     <div class="container">
         <h1>Welcome to CSS World!</h1>
         <p>
-            This is a simple example showcasing <strong>100 different CSS properties</strong>
+            This is a simple example showcasing <strong>120 different CSS properties</strong>
             in action. Enjoy the unique styles applied to this webpage.
         </p>
         <img src="https://via.placeholder.com/800x400" alt="Placeholder Image">
@@ -102,11 +178,18 @@
         <ul>
             <li>Responsive design</li>
             <li>Hover effects</li>
+            <li>Animations</li>
             <li>Transitions</li>
             <li>Custom styling</li>
             <li>Shadow effects</li>
         </ul>
         <a href="#" class="button">Click Me!</a>
+        
+        <!-- Fun Elements -->
+        <div class="fun-element"></div>
+        <div class="floating button">Float on Hover!</div>
+        <div class="hover-burst button">Burst on Hover!</div>
+        <div class="scale-up button">Scale Up!</div>
     </div>
     <footer>
         <p>&copy; 2023 CSS Example. All rights reserved.</p>
