--- a/public/Testing-page-random.html
+++ b/public/Testing-page-random.html
@@ -3,197 +3,122 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>120 CSS Properties Example</title>
+    <title>Text-based Adventure Game</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
             background-color: #f4f4f4;
             color: #333;
-            animation: backgroundAnimation 10s infinite alternate;
-        }
-        @keyframes backgroundAnimation {
-            0% { background-color: #f4f4f4; }
-            100% { background-color: #e0f7fa; }
+            margin: 20px;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         h1 {
-            font-size: 2.5rem;
             text-align: center;
-            color: #4CAF50;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
-            margin: 20px;
-            transition: transform 0.3s;
         }
-        h1:hover {
-            transform: scale(1.1);
-        }
-        p {
-            font-size: 1.2rem;
-            line-height: 1.5;
-            margin: 20px;
-            padding: 10px;
-            border: 1px solid #ddd;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-            transition: transform 0.2s;
-        }
-        .container:hover {
-            transform: translateY(-5px);
-        }
-        .button {
-            display: inline-block;
-            padding: 15px 30px;
-            font-size: 1.2rem;
-            color: white;
-            background-color: #337ab7;
-            text-align: center;
-            text-decoration: none;
-            border-radius: 5px;
-            border: none;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.2);
-            cursor: pointer;
-            transition: background-color 0.3s, transform 0.3s;
-        }
-        .button:hover {
-            background-color: #286090;
-            transform: scale(1.05);
-            animation: bounce 1s;
-        }
-        @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
-            40% { transform: translateY(-10px); }
-            60% { transform: translateY(-5px); }
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-            animation: fadeIn 2s;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-        ul {
-            list-style-type: square;
-            padding-left: 20px;
-            color: #555;
-        }
-        li {
+        .option {
+            display: block;
             margin: 10px 0;
-        }
-        footer {
+            padding: 10px;
+            background-color: #007BFF;
+            color: white;
             text-align: center;
-            padding: 20px;
-            background-color: #4CAF50;
-            color: white;
-            position: relative;
-            animation: pulse 1.5s infinite;
-        }
-        @keyframes pulse {
-            0%, 100% { transform: scale(1); }
-            50% { transform: scale(1.05); }
-        }
-        .footer-link {
-            color: white;
-            text-decoration: none;
-            opacity: 0.9;
-            transition: opacity 0.3s;
-        }
-        .footer-link:hover {
-            opacity: 1;
-            transform: translateY(-2px);
-        }
-        /* Fun CSS Properties */
-        .fun-element {
-            width: 100px;
-            height: 100px;
-            margin: 20px auto;
-            background-color: #FF5722;
-            border-radius: 50%;
-            animation: spin 4s linear infinite;
-            box-shadow: 0 0 15px rgba(255, 87, 34, 0.7);
-        }
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-        .floating {
-            display: inline-block;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-        .floating:hover {
-            transform: translateY(-15px);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
-        }
-        .hover-burst {
-            display: inline-block;
-            position: relative;
-        }
-        .hover-burst::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 0;
-            height: 0;
-            background: rgba(255, 255, 255, 0.5);
-            border-radius: 50%;
-            transition: all 0.5s ease;
-            z-index: -1;
-            transform: translate(-50%, -50%);
-        }
-        .hover-burst:hover::after {
-            width: 200%;
-            height: 200%;
-        }
-        .scale-up {
+            border-radius: 5px;
             cursor: pointer;
-            transition: transform 0.3s;
         }
-        .scale-up:hover {
-            transform: scale(1.1);
+        .option:hover {
+            background-color: #0056b3;
+        }
+        #story {
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to CSS World!</h1>
-        <p>
-            This is a simple example showcasing <strong>120 different CSS properties</strong>
-            in action. Enjoy the unique styles applied to this webpage.
-        </p>
-        <img src="https://via.placeholder.com/800x400" alt="Placeholder Image">
-        <h2>Features:</h2>
-        <ul>
-            <li>Responsive design</li>
-            <li>Hover effects</li>
-            <li>Animations</li>
-            <li>Transitions</li>
-            <li>Custom styling</li>
-            <li>Shadow effects</li>
-        </ul>
-        <a href="#" class="button">Click Me!</a>
-        
-        <!-- Fun Elements -->
-        <div class="fun-element"></div>
-        <div class="floating button">Float on Hover!</div>
-        <div class="hover-burst button">Burst on Hover!</div>
-        <div class="scale-up button">Scale Up!</div>
-    </div>
-    <footer>
-        <p>&copy; 2023 CSS Example. All rights reserved.</p>
-        <a class="footer-link" href="#">Privacy Policy</a> | <a class="footer-link" href="#">Terms of Use</a>
-    </footer>
+
+    <h1>Text-based Adventure Game</h1>
+    <div id="story"></div>
+    <div id="options"></div>
+
+    <script>
+        const storyElement = document.getElementById('story');
+        const optionsElement = document.getElementById('options');
+
+        const story = {
+            start: {
+                text: "You wake up in a dark forest. You can see two paths ahead: one leading to the left and one to the right. Which path do you choose?",
+                options: [
+                    { text: "Go left", next: "leftPath" },
+                    { text: "Go right", next: "rightPath" }
+                ]
+            },
+            leftPath: {
+                text: "You walk down the left path and encounter a friendly elf. Do you talk to the elf or ignore it?",
+                options: [
+                    { text: "Talk to the elf", next: "talkToElf" },
+                    { text: "Ignore the elf", next: "ignoreElf" }
+                ]
+            },
+            rightPath: {
+                text: "You take the right path and find a raging river. Do you try to swim across or look for a bridge?",
+                options: [
+                    { text: "Swim across", next: "swim" },
+                    { text: "Look for a bridge", next: "bridge" }
+                ]
+            },
+            talkToElf: {
+                text: "The elf gives you a magical sword that can defeat any monster. You win!",
+                options: []
+            },
+            ignoreElf: {
+                text: "As you walk away, the elf casts a spell on you. You fall asleep and never wake up. Game Over.",
+                options: []
+            },
+            swim: {
+                text: "You attempt to swim across but the current is too strong. You drown. Game Over.",
+                options: []
+            },
+            bridge: {
+                text: "You find a bridge and cross safely. On the other side, you discover a treasure chest filled with gold! You win!",
+                options: []
+            }
+        };
+
+        function startGame() {
+            showStory('start');
+        }
+
+        function showStory(key) {
+            const currentStory = story[key];
+            storyElement.innerText = currentStory.text;
+            optionsElement.innerHTML = ""; // Clear options
+
+            currentStory.options.forEach(option => {
+                const button = document.createElement('div');
+                button.className = 'option';
+                button.innerText = option.text;
+                button.onclick = () => {
+                    if (option.next) {
+                        showStory(option.next);
+                    }
+                };
+                optionsElement.appendChild(button);
+            });
+
+            // If no options are available, show a replay button
+            if (currentStory.options.length === 0) {
+                const playAgainButton = document.createElement('div');
+                playAgainButton.className = 'option';
+                playAgainButton.innerText = 'Play Again';
+                playAgainButton.onclick = startGame;
+                optionsElement.appendChild(playAgainButton);
+            }
+        }
+
+        // Start the game on load
+        startGame();
+    </script>
+
 </body>
 </html>
